--- a/src/flavors/bridges/config.yml
+++ b/src/flavors/bridges/config.yml
@@ -1,11 +1,11 @@
 # Settings for the app
 app:
   # HTML Title
-  title: Our Community Map
+  title: Which Georgetown waterfront?
   # Header name
-  name: Our Community Map
+  name: Which Georgetown waterfront?
   # Meta description that will show up in Google search results
-  meta_description: _(We are gathering public input on important issues in the community)
+  meta_description: _(The residents of Georgetown have an opportunity to improve their waterfront access points. We are collaborating with the community to do a King County Waterworks grant)
   # Meta author that will show up in Google search results
   meta_author: smartercleanup.org
 
@@ -22,6 +22,7 @@ app:
 map:
   geolocation_enabled: true
   geolocation_onload: false
+  cartodb_enabled: true
 
   geocoding_enabled: true
   geocode_field_label: _(Enter an address...)
@@ -29,32 +30,71 @@ map:
 
   options:
     center:
-      lat: 45.51369
-      lng: -122.67111
-    zoom: 14
+      lat: 47.53885
+      lng: -122.32246
+    zoom: 15
     minZoom: 1
     maxZoom: 18
   layers:
     - url: //api.tiles.mapbox.com/v4/smartercleanup.ndhd2lem/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="http://mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="http://www.mapquest.com/" target="_blank">MapQuest</a> <img src="http://developer.mapquest.com/content/osm/mq_logo.png">.'
 
-    - id: pins
-      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/mapbox/landmarks?url=http://a.tiles.mapbox.com/v4/smartercleanup.p58e6k92/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
-      type: landmark
+    - id: options
+      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/mapbox/landmarks?url=http://a.tiles.mapbox.com/v4/smartercleanup.p5ni43lo/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
+      type: json
       visibleDefault: true
-      popupContent: '{{title}}{{description}}'
+      popupContent: '{{description}}'
       rules:
-        - condition: 'true'
-          style:
-            color: "#444"
-            opacity: 0.6
-            fillOpacity: 0.1
-            weight: 1
-          icon:
-            iconUrl: /static/css/images/markers/marker-0d85e9.png
-            shadowUrl: /static/css/images/marker-shadow.png
-            iconSize: [25, 41]
-            iconAnchor: [12, 41]
+    # LineString
+      - condition: '"{{geometry.type}}" == "LineString"'
+        style:
+          color: "{{properties.stroke}}"
+          opacity: '{{properties.stroke-opacity}}'
+          weight: "{{properties.stroke-width}}"
+    # Polygons
+      - condition: '"{{geometry.type}}" == "Polygon"'
+        style:
+          shapeType: polygon
+          fillColor: "{{properties.fill}}"
+          fill: 'true'
+          color: "{{properties.stroke}}"
+          opacity: 0.7
+          fillOpacity: '{{properties.fill-opacity}}'
+          weight: "{{properties.stroke-width}}"
+
+  # Legend Layers
+
+    - id: cleanup
+      type: cartodb
+      url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
+      legend: true
+      description: _(The EPA-approved cleanup plan for the river)
+      title: _(River cleanup plan)
+      visibleDefault: false
+
+      # WMS landuse
+    - id: landuse
+      url: //d171ntg776wsmz.cloudfront.net/geoserver/wria9/gwc/service/wms
+      layers: 'wria9:Landuse2010'
+      version: '1.1.0'
+      transparent: 'true'
+      format: 'image/png'
+      legend: true
+      opacity: 0.5
+      description-image: /static/css/images/legend-landuse2010.png
+      description-image-alt: 'legend'
+      title: _(Land use)
+      visibleDefault: false
+
+      # WMS Original Flow
+    - id: duwamish-original
+      url: https://smartercleanup.cartodb.com/api/v2/viz/ab34ca50-c6fc-11e5-ba65-0ecd1babdde5/viz.json
+      type: cartodb
+      legend: true
+      opacity: 0.4
+      description: _(The original Duwamish River path)
+      title: _(Original river path)
+      visibleDefault: false
 
 # The keys show up in the dropdown list when you are adding a new place
 # The values map the place type to map icons (defined below).
@@ -201,13 +241,13 @@ place_types:
 
       - condition: '"{{geometry.type}}" == "Point"'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-option-a.png
           iconSize: [30, 30]
           iconAnchor: [15, 15]
 
       - condition: '"{{geometry.type}}" == "Point" && "{{layer.focused}}" === true'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-option-a.png
           iconSize: [50, 60]
           iconAnchor: [25, 60]
           shadowSize: [50, 60]
@@ -237,6 +277,7 @@ sidebar:
         image: /static/css/images/markers/marker-complaint.png
         url: /filter/complaint
 
+
 leaflet_sidebar:
   enabled: true
 
@@ -248,7 +289,7 @@ activity:
 
 place:
   adding_supported: true
-  add_button_label: _(Put a comment on the map!)
+  add_button_label: _(Add a comment to the map)
   # Labels for the buttons that toggle the map and list views
   show_list_button_label: _(See all comments)
   show_map_button_label: _(Show the Map)
@@ -312,11 +353,11 @@ place:
           value: _(Receive email updates on your report)
         - key: size
           value: 30
-    - prompt: _(Image)
+    - prompt: _(.)
       inputfile_label: _(Add an Image)
       type: file
       name: my_image
-      optional: true
+      optional: false
       attrs:
         - key: accept
           value: image/*
@@ -362,10 +403,6 @@ pages:
     slug: about
     name: overview
     start_page: true
-
-  - title: _(Get involved)
-    slug: getinvolved
-    name: contribute
 
 notifications:
   on_new_place: true
