--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -44,21 +44,19 @@ map:
     minZoom: 1
     maxZoom: 18
   layers:
-#      attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
-      # SmarterCleanup Mapbox base layer:
+    # SmarterCleanup Mapbox base layer:
     - id: mapbox-base # unique identifier for the layer
       url: //api.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/{z}/{x}/{y}.png?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       visibleDefault: true
       attribution: '&copy; OpenStreetMap contributors, CC-BY-SA. <a href="//mapbox.com/about/maps" target="_blank">Terms &amp; Feedback</a>. Geocoding Courtesy of <a href="//www.mapquest.com/" target="_blank">MapQuest</a> <img src="//developer.mapquest.com/content/osm/mq_logo.png">.'
 
-      # Carto basemap additions
+    # Carto basemap additions layer
     - id: additions
       url: https://smartercleanup.cartodb.com/api/v2/viz/3c0197f8-c7d8-11e5-8232-0ecfd53eb7d3/viz.json
       type: cartodb
       visibleDefault: true
 
   # Legend Layers
-
     - id: restoration
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/mapbox/landmarks?url=http://a.tiles.mapbox.com/v4/smartercleanup.k9dcl2i9/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw
       type: landmark
@@ -260,7 +258,6 @@ place_types:
       - condition: '"{{properties.marker-color}}" == "f86767"'
         icon:
           iconUrl: /static/css/images/markers/marker-hist_no-prog-or-dead.png
-
 
   mapbox:
     # Mapbox Points
@@ -499,22 +496,82 @@ sidebar:
   slug: filter-type
   # Layers are defined in the "map config" section
   # TODO: Refactor the Layers section into its own sidebar
-  layersTitle: _(Map Layers)
-  reports:
-    title: _(Report Types)
-    items:
-      - title: _(Observations)
-        image: /static/css/images/markers/marker-observation.png
-        url: /filter/observation
-      - title: _(Ideas)
-        image: /static/css/images/markers/marker-idea.png
-        url: /filter/idea
-      - title: _(Questions)
-        image: /static/css/images/markers/marker-question.png
-        url: /filter/question
-      - title: _(Complaints)
-        image: /static/css/images/markers/marker-complaint.png
-        url: /filter/complaint
+  panels:
+    legend:
+      title: _(Legend:)
+      items:
+        - title: _(Observations)
+          image: /static/css/images/markers/marker-observation.png
+          url: /filter/observation
+        - title: _(Ideas)
+          image: /static/css/images/markers/marker-idea.png
+          url: /filter/idea
+        - title: _(Questions)
+          image: /static/css/images/markers/marker-question.png
+          url: /filter/question
+        - title: _(Complaints)
+          image: /static/css/images/markers/marker-complaint.png
+          url: /filter/complaint
+    gis_layers:
+      title: _(Map Layers:)
+      groupings:
+        - id: grouping1
+          legend: true
+          title: _(Grouping 1:)
+          layers:
+            - id: restoration
+              legend: true
+              visibleDefault: true
+              title: _(Restoration sites)
+              description: _(Habitat restoration and community organizing)
+
+            - id: vision
+              legend: true
+              visibleDefault: true
+              title: _(Community vision)
+              description: _(Priority areas identified through community visioning projects)
+
+            - id: cleanup
+              legend: true
+              description: _(The EPA-approved cleanup plan for the river)
+              title: _(River cleanup plan)
+              visibleDefault: true
+
+        - id: grouping2
+          legend: true
+          title: _(Grouping 2:)
+          layers:
+              # WMS landuse
+            - id: landuse
+              legend: true
+              description-image: /static/css/images/legend-landuse2010.png
+              description-image-alt: 'legend'
+              title: _(Land use)
+              visibleDefault: false
+
+              # WMS Buildings connection:
+            - id: buildings
+              legend: true
+              description: _(legend coming soon!)
+              title: _(Buildings)
+              visibleDefault: false
+
+              # WMS NLCD
+            - id: landcoverage
+              legend: true
+              description-image: /static/css/images/legend-nlcd2011.png
+              description-image-alt: 'legend'
+              title: _(Land coverage)
+              visibleDefault: false
+
+              # WMS Original Flow
+            - id: duwamish-original
+              legend: true
+              description: _(The original Duwamish River path)
+              title: _(Original river path)
+              visibleDefault: false
+    ticker:
+      title: _(Activity Stream:)
 
 leaflet_sidebar:
   enabled: true
