update flavor configs to support enforced category ordering

--- a/src/flavors/raingardens/config.yml
+++ b/src/flavors/raingardens/config.yml
@@ -184,7 +184,7 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    raingarden:
+    - category: raingarden
       includeOnForm: true
       name: location_type
       dataset: raingardens
