--- a/src/flavors/bogtobay/config.yml
+++ b/src/flavors/bogtobay/config.yml
@@ -711,7 +711,7 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    pledge:
+    - category: pledge
       includeOnForm: true
       name: location_type
       dataset: bogtobay
@@ -748,7 +748,7 @@ place:
               value: other
           optional: true 
           # NOTE: checkbox_big_button inputs have no validation
-    action:
+    - category: action
       includeOnForm: true
       name: location_type
       dataset: bogtobay
@@ -785,7 +785,7 @@ place:
               value: other
           optional: true 
           # NOTE: checkbox_big_button inputs have no validation
-    observation:
+    - category: observation
       includeOnForm: true
       name: location_type
       dataset: bogtobay
@@ -822,7 +822,7 @@ place:
           display_prompt: _(Further description:)
           placeholder: _(Enter description...)
           optional: false
-    question:
+    - category: question
       includeOnForm: true
       name: location_type
       dataset: bogtobay
@@ -841,7 +841,7 @@ place:
           prompt: "_(What's your question?)"
           display_prompt: _(My question:)
           placeholder: _(Enter question...)
-    idea:
+    - category: idea
       includeOnForm: false
       name: location_type
       dataset: bogtobay
@@ -861,7 +861,7 @@ place:
           display_prompt: "_(Here's my idea:)"
           placeholder: _(Description...)
           optional: false
-    complaint:
+    - category: complaint
       includeOnForm: false
       name: location_type
       dataset: bogtobay
@@ -881,7 +881,7 @@ place:
           display_prompt: _(I have the following complaint:)
           placeholder: _(Description...)
           optional: false
-    air_watch:  #defines a top-level form category
+    - category: air_watch  #defines a top-level form category
       includeOnForm: false
       name: location_type  #needs to be "location_type"
       dataset: bogtobay
