--- a/src/flavors/greenways/config.yml
+++ b/src/flavors/greenways/config.yml
@@ -727,7 +727,7 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    observation:
+    - category: observation
       includeOnForm: true
       name: location_type
       dataset: duwamish
@@ -764,7 +764,7 @@ place:
           display_prompt: _(Further description:)
           placeholder: _(Enter description...)
           optional: false
-    question:
+    - category: question
       includeOnForm: true
       name: location_type
       dataset: duwamish
@@ -783,7 +783,7 @@ place:
           prompt: "_(What's your question?)"
           display_prompt: _(My question:)
           placeholder: _(Enter question...)
-    idea:
+    - category: idea
       includeOnForm: true
       name: location_type
       dataset: duwamish
@@ -803,7 +803,7 @@ place:
           display_prompt: "_(Here's my idea:)"
           placeholder: _(Description...) 
           optional: false
-    complaint:
+    - category: complaint
       includeOnForm: true
       name: location_type
       dataset: duwamish
@@ -823,7 +823,7 @@ place:
           display_prompt: _(I have the following complaint:)
           placeholder: _(Description...)
           optional: false
-    air_watch:  #defines a top-level form category
+    - category: air_watch  #defines a top-level form category
       includeOnForm: true
       name: location_type  #needs to be "location_type"
       dataset: air
