--- a/src/flavors/lakewashington/config.yml
+++ b/src/flavors/lakewashington/config.yml
@@ -320,7 +320,7 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    observation:
+    - categoy: observation
       includeOnForm: true
       name: location_type
       dataset: lakewashington
@@ -340,7 +340,7 @@ place:
           display_prompt: _(Further description:)
           placeholder: _(Enter description...)
           optional: false
-    question:
+    - category: question
       includeOnForm: true
       name: location_type
       dataset: lakewashington
@@ -359,7 +359,7 @@ place:
           prompt: "_(What's your question?)"
           display_prompt: _( )
           placeholder: _(Enter question...)
-    idea:
+    - category: idea
       includeOnForm: true
       name: location_type
       dataset: lakewashington
@@ -379,7 +379,7 @@ place:
           display_prompt: "_(Here's my idea:)"
           placeholder: _(Description...)
           optional: false
-    complaint:
+    - category: complaint
       includeOnForm: true
       name: location_type
       dataset: lakewashington
