--- a/src/flavors/snoqualmie/config.yml
+++ b/src/flavors/snoqualmie/config.yml
@@ -351,7 +351,7 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    observation:
+    - category: observation
       includeOnForm: true
       name: location_type
       dataset: snoqualmie
@@ -371,7 +371,7 @@ place:
           display_prompt: _(Further description:)
           placeholder: _(Enter description...)
           optional: false
-    question:
+    - category: question
       includeOnForm: true
       name: location_type
       dataset: snoqualmie
@@ -390,7 +390,7 @@ place:
           prompt: "_(What's your question?)"
           display_prompt: _(My question:)
           placeholder: _(Enter question...)
-    idea:
+    - category: idea
       includeOnForm: true
       name: location_type
       dataset: snoqualmie
@@ -410,7 +410,7 @@ place:
           display_prompt: "_(Here's my idea:)"
           placeholder: _(Description...)
           optional: false
-    complaint:
+    - category: complaint
       includeOnForm: true
       name: location_type
       dataset: snoqualmie
