--- a/src/flavors/waterfront/config.yml
+++ b/src/flavors/waterfront/config.yml
@@ -326,7 +326,7 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    observation:
+    - category: observation
       includeOnForm: true
       name: location_type
       dataset: waterfront
@@ -346,7 +346,7 @@ place:
           display_prompt: _(Further description:)
           placeholder: _(Enter description...)
           optional: false
-    question:
+    - category: question
       includeOnForm: true
       name: location_type
       dataset: waterfront
@@ -365,7 +365,7 @@ place:
           prompt: "_(What's your question?)"
           display_prompt: _(My question:)
           placeholder: _(Enter question...)
-    idea:
+    - category: idea
       includeOnForm: true
       name: location_type
       dataset: waterfront
@@ -385,7 +385,7 @@ place:
           display_prompt: "_(Here's my idea:)"
           placeholder: _(Description...)
           optional: false
-    complaint:
+    - category: complaint
       includeOnForm: true
       name: location_type
       dataset: waterfront
