--- a/src/flavors/willamette/config.yml
+++ b/src/flavors/willamette/config.yml
@@ -297,7 +297,7 @@ place:
 
   #### begin dynamic form config ####
   place_detail:
-    observation:
+    - category: observation
       includeOnForm: true
       name: location_type
       dataset: willamette
@@ -317,7 +317,7 @@ place:
           display_prompt: _(Further description:)
           placeholder: _(Enter description...)
           optional: false
-    question:
+    - category: question
       includeOnForm: true
       name: location_type
       dataset: willamette
@@ -336,7 +336,7 @@ place:
           prompt: "_(What's your question?)"
           display_prompt: _(My question:)
           placeholder: _(Enter question...)
-    idea:
+    - category: idea
       includeOnForm: true
       name: location_type
       dataset: willamette
@@ -356,7 +356,7 @@ place:
           display_prompt: "_(Here's my idea:)"
           placeholder: _(Description...)
           optional: false
-    complaint:
+    - category: complaint
       includeOnForm: true
       name: location_type
       dataset: willamette
