--- a/src/flavors/bogtobay/config.yml
+++ b/src/flavors/bogtobay/config.yml
@@ -17,15 +17,15 @@ app:
   # Optional. List view is supported by default. Set to false to disable.
   # list_enabled: false
 
-languages:
-  - code: en
-    label: I Speak English
+# languages:
+#   - code: en
+#     label: I Speak English
 
-  - code: es
-    label: Hablo Español
+#   - code: es
+#     label: Hablo Español
 
-  - code: vi
-    label: tôi nói tiếng việt
+#   - code: vi
+#     label: tôi nói tiếng việt
 
 
 map:
@@ -381,13 +381,6 @@ place_types:
     rules:
       - condition: 'true'
         icon:
-          iconUrl: /static/css/images/markers/marker-dbcf2c.png
-
-  action:
-    zoomType: mapboxZoomStyle
-    rules:
-      - condition: 'true'
-        icon:
           iconUrl: /static/css/images/markers/marker-f95016.png
 
   # # needs a marker
@@ -701,7 +694,7 @@ place:
   show_list_button_label: _(See All Reports)
   show_map_button_label: _(Show the Map)
   action_text: _(added)
-  title: _(Tell us more...)
+  title: _(New post)
   action_text: _(created)
   anonymous_name: _(Someone)
   submit_button_label: _(Put it on the map!)
@@ -715,33 +708,27 @@ place:
       includeOnForm: true
       name: location_type
       dataset: bogtobay
-      icon_url: /static/css/images/markers/marker-dbcf2c.png
+      icon_url: /static/css/images/markers/marker-f95016.png
       value: pledge
       label: _(Stewardship Pledge)
       fields:
         - name: title
           type: text
-          prompt: _(Title)
-          display_prompt: _(Title of this tree:)
+          prompt: _(The title of my post is:)
+          display_prompt: _( )
           placeholder: _(Enter title)
           optional: false
-        - name: description
-          type: textarea
-          prompt: _(Description)
-          display_prompt: _(Description of this tree:)
-          placeholder: _(Description...)
-          optional: false
-        - name: pollution_type
+        - name: pledge_type
           type: checkbox_big_buttons
-          prompt: _(Types of pollution seen:)
-          display_prompt: _(I saw the following types of pollution here:)
+          prompt: _(I pledge to:)
+          display_prompt: _(I pledge to:)
           content:
             - label: _(Scoop the poop)
-              value: sewage
-            - label: _(Tires)
-              value: tires
-            - label: _(Illegal dumpsite)
-              value: dumpsite
+              value: poopscoop
+            - label: _(Always use natural yard care)
+              value: naturalyard
+            - label: _(Always use a commercial car wash)
+              value: carwash
             - label: _(Litter)
               value: litter
             - label: _(Other)
@@ -762,11 +749,11 @@ place:
           display_prompt: _(Title of this tree:)
           placeholder: _(Enter title)
           optional: false
-        - name: description
+        - name: comments
           type: textarea
-          prompt: _(Description)
-          display_prompt: _(Description of this tree:)
-          placeholder: _(Description...)
+          prompt: _(Additional comments)
+          display_prompt: _( )
+          placeholder: _(Additional comments...)
           optional: false
         - name: pollution_type
           type: checkbox_big_buttons
