--- a/src/flavors/greenways/config.yml
+++ b/src/flavors/greenways/config.yml
@@ -65,15 +65,6 @@ map:
       type: place
       slug: report
 
-       # WRIA9 watershed
-    - id: watershed
-      type: cartodb
-      url: "https://heyduwamishcore.cartodb.com/api/v2/viz/61226fec-0399-11e6-8de1-0e31c9be1b51/viz.json"
-
-    - id: cleanup
-      type: cartodb
-      url: "https://smartercleanup.cartodb.com/api/v2/viz/b369d508-c02b-11e5-9a08-0ecfd53eb7d3/viz.json"
-
     - id: greenways_layer
       type: cartodb
       url: "https://lenswork64.carto.com/api/v2/viz/d59f6828-6b15-11e6-bed3-0e233c30368f/viz.json"
@@ -88,56 +79,11 @@ map:
       url: "https://hdbig.cartodb.com/api/v2/viz/76d1e054-d5ed-11e5-bf91-0e5db1731f59/viz.json"
       opacity: 0.5
 
-      # Green Seattle Partnership restoration phases
-    - id: phases
-      type: cartodb
-      url: "https://gis206.cartodb.com/api/v2/viz/217a2e02-e729-11e5-9bd4-0e5db1731f59/viz.json"
-
-      # WMS Original Flow
-    - id: duwamish-original
-      url: https://smartercleanup.cartodb.com/api/v2/viz/ab34ca50-c6fc-11e5-ba65-0ecd1babdde5/viz.json
-      type: cartodb
-      opacity: 0.4
-
       # Noxious Weeds
     - id: noxious-weeds
       type: cartodb
       url: "https://hdbig.cartodb.com/api/v2/viz/f9350ac8-d677-11e5-980b-0e5db1731f59/viz.json"
       opacity: 0.5
-
-    - id: cso
-      type: json
-      url: "https://raw.githubusercontent.com/keum/data_display/master/cso_test_file.geojson"
-      popupContent: '{{description}}'
-      rules:
-        - condition: '"{{properties.description}}" === "No recent overflow"'
-          icon:
-            iconUrl: /static/css/images/markers/dot-4ab767.png
-            iconSize: [20, 20]
-            iconAnchor: [10, 10]
-          style:
-            opacity: 0.9
-        - condition: '"{{properties.description}}" === "Overflowed in the last 48 hrs"'
-          icon:
-            iconUrl: /static/css/images/markers/dot-dbcf2c.png
-            iconSize: [20, 20]
-            iconAnchor: [10, 10]
-          style:
-            opacity: 0.9
-        - condition: '"{{properties.description}}" === "Overflowing now"'
-          icon:
-            iconUrl: /static/css/images/markers/dot-f95016.png
-            iconSize: [20, 20]
-            iconAnchor: [10, 10]
-          style:
-            opacity: 0.9
-        - condition: '"{{properties.description}}" === "Data not available"'
-          icon:
-            iconUrl: /static/css/images/markers/dot-5359d7.png
-            iconSize: [20, 20]
-            iconAnchor: [10, 10]
-          style:
-            opacity: 0.9
 
     - id: zoning
       type: esri-feature
@@ -336,7 +282,7 @@ place_types:
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
-          iconUrl: /static/css/images/markers/marker-greenwall.png
+          iconUrl: /static/css/images/markers/marker-star.png
           shadowUrl: /static/css/images/marker-shadow.png
           iconSize: [50, 60]
           iconAnchor: [25, 60]
@@ -453,10 +399,6 @@ sidebar:
               title: _(Bicycle Master Plan)
               visibleDefault: true
 
-            - id: cleanup
-              title: _(River Cleanup Plan)
-              visibleDefault: false
-
             - id: dark
               title: _(Dark map)
               visibleDefault: false
@@ -475,37 +417,13 @@ sidebar:
               title: _(Land use)
               visibleDefault: false
 
-              # Green Seattle Partnership restoration phases
-            - id: phases
-              title: _(Green Seattle partnership)
-              visibleDefault: false
-
               # Noxious Weeds
             - id: noxious-weeds
               title: _(Noxious Weeds)
               visibleDefault: false
 
-            - id: cso
-              title: _(Sewer Overflow)
-              visibleDefault: false
-
-              # WRIA9 watershed
-            - id: watershed
-              title: _(Watershed)
-              visibleDefault: false
-
             - id: zoning
               title: _(Zoning)
-              visibleDefault: false
-
-        - id: grp-history
-          title: _(Historical Data)
-          visibleDefault: false
-          layers:
-
-              # WMS Original Flow
-            - id: duwamish-original
-              title: _(Original River Path)
               visibleDefault: false
 
     - id: ticker
@@ -567,31 +485,14 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your observation:)
+          prompt: _(Title of your report:)
           display_prompt: _(Title:)
           placeholder: _(Enter title...)
           optional: false
-        - name: pollution_type
-          type: checkbox_big_buttons
-          prompt: _(Types of pollution seen:)
-          display_prompt: _(I saw the following types of pollution here:)
-          content:
-            - label: _(Trip hazard)
-              value: sewage
-            - label: _(Tires)
-              value: tires
-            - label: _(Illegal dumpsite)
-              value: dumpsite
-            - label: _(Litter)
-              value: litter
-            - label: _(Other)
-              value: other
-          optional: true 
-          # NOTE: checkbox_big_button inputs have no validation
         - name: description
           type: textarea
-          prompt: _(Description of this pollution:)
-          display_prompt: _(Further description:)
+          prompt: _(Description:)
+          display_prompt: _( )
           placeholder: _(Enter description...)
           optional: false
     - category: signage
@@ -604,14 +505,14 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your question:)
+          prompt: _(Title of your report:)
           display_prompt: _(Title:)
           placeholder: _(Enter title...)
           optional: false
         - name: description
           type: textarea
-          prompt: "_(What's your question?)"
-          display_prompt: _(My question:)
+          prompt: "_(Description:)"
+          display_prompt: _( )
           placeholder: _(Enter question...)
     - category: pavement
       includeOnForm: true
@@ -623,14 +524,14 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your idea:)
+          prompt: _(Title of your report:)
           placeholder: _(Enter title...)
           display_prompt: _(Title:)
           optional: false
         - name: description
           type: textarea
-          prompt: _(Describe your idea below:)
-          display_prompt: "_(Here's my idea:)"
+          prompt: _(Description:)
+          display_prompt: "_( )"
           placeholder: _(Description...) 
           optional: false
     - category: walkability
@@ -643,14 +544,29 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your complaint:)
+          prompt: _(Title of your report:)
           placeholder: _(Enter title...)
           display_prompt: _(Title:)
           optional: false
+        - name: walkability_issue
+          type: checkbox_big_buttons
+          prompt: _(Walkability issue:)
+          display_prompt: _(Check all that apply:)
+          content:
+            - label: _(Slip hazard)
+              value: slip
+            - label: _(Trip hazard)
+              value: trip
+            - label: _(Obstruction)
+              value: obstruction
+            - label: _(Vegetation overgrowth)
+              value: veg_overgrowth
+            - label: _(Other)
+              value: other
         - name: description
           type: textarea
-          prompt: "_(What's your complaint?)"
-          display_prompt: _(I have the following complaint:)
+          prompt: "_(Description: )"
+          display_prompt: _( )
           placeholder: _(Description...)
           optional: false
     - category: accessibility
@@ -663,14 +579,14 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your complaint:)
+          prompt: _(Title of your report:)
           placeholder: _(Enter title...)
           display_prompt: _(Title:)
           optional: false
         - name: description
           type: textarea
-          prompt: "_(What's your complaint?)"
-          display_prompt: _(I have the following complaint:)
+          prompt: "_(Description:)"
+          display_prompt: _( )
           placeholder: _(Description...)
           optional: false
     - category: traffic
@@ -683,14 +599,14 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your complaint:)
+          prompt: _(Title of your report:)
           placeholder: _(Enter title...)
           display_prompt: _(Title:)
           optional: false
         - name: description
           type: textarea
-          prompt: "_(What's your complaint?)"
-          display_prompt: _(I have the following complaint:)
+          prompt: "_(Description:)"
+          display_prompt: _( )
           placeholder: _(Description...)
           optional: false
     - category: design
@@ -703,14 +619,14 @@ place:
       fields:
         - name: title
           type: text
-          prompt: _(Title of your complaint:)
+          prompt: _(Title of your report:)
           placeholder: _(Enter title...)
           display_prompt: _(Title:)
           optional: false
         - name: description
           type: textarea
-          prompt: "_(What's your complaint?)"
-          display_prompt: _(I have the following complaint:)
+          prompt: "_(Description:)"
+          display_prompt: _( )
           placeholder: _(Description...)
           optional: false
     # - category: accessibility  #defines a top-level form category
