--- a/src/flavors/bogtobay/config.yml
+++ b/src/flavors/bogtobay/config.yml
@@ -17,12 +17,13 @@ app:
   # Optional. List view is supported by default. Set to false to disable.
   # list_enabled: false
 
-# languages:
-#   - code: en
-#     label: I Speak English
+languages:
+  - code: es
+    label: Hablo Español
 
-#   - code: es
-#     label: Hablo Español
+  - code: en
+    label: I Speak English
+
 
 #   - code: vi
 #     label: tôi nói tiếng việt
