lazy loading layers: Bind landmark collection listeners in initialize
Previously, landmark collection listeners were getting bound only
when the visibility event was triggered for a given landmark collection.
As a result, it was possible that landmark models would be fetched but
their layer views never created. To fix this, make sure we bind collection
listeners in the initialize method of the map view.

It was also convenient in this commit to support layer toggling for individual
shareabouts place collections. This does away with the separate shareabouts
layer in the layers section of the config.

Addresses: #436
Fixes: #408

--- a/src/flavors/duwamish_flavor/config.yml
+++ b/src/flavors/duwamish_flavor/config.yml
@@ -60,11 +60,12 @@ map:
       attribution: 'Hello World'
       type: basemap
 
-    # For our Shareabouts reports
-    - id: reports
-      type: shareabouts
+    # Carto basemap additions layer
+    - id: additions
+      url: https://smartercleanup.cartodb.com/api/v2/viz/3c0197f8-c7d8-11e5-8232-0ecfd53eb7d3/viz.json
+      type: cartodb
 
-  # Legend Layers
+    # Legend Layers
     - id: restoration
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
@@ -602,8 +603,16 @@ sidebar:
           title: _(Community Data)
           visibleDefault: true
           layers:
-            - id: reports
-              title: _(Community Reports)
+            - id: duwamish
+              title: _(Duwamish Cleanup Reports)
+              visibleDefault: false
+
+            - id: trees
+              title: _(Trees!)
+              visibleDefault: true
+
+            - id: air
+              title: _(Air Watch Reports)
               visibleDefault: true
 
             - id: cleanup
