--- a/src/flavors/gtopenspace/config.yml
+++ b/src/flavors/gtopenspace/config.yml
@@ -52,6 +52,12 @@ map:
 
   # Legend Layers
   
+    - id: siteinfo
+      url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
+      type: landmark
+      sources:
+        - "http://a.tiles.mapbox.com/v4/smartercleanup.0f2jhd96/features.json?access_token=pk.eyJ1Ijoic21hcnRlcmNsZWFudXAiLCJhIjoiTnFhUWc2cyJ9.CqPJH-9yspIMudowQJx2Uw"
+
     - id: restoration
       url: https://k7b7dyc4v3.execute-api.us-west-2.amazonaws.com/production/getLandmarks
       type: landmark
@@ -61,7 +67,7 @@ map:
 
     - id: gtopenspace1
       type: place
-      slug: idea
+      slug: site
 
     - id: gtopenspace2
       type: place
@@ -298,7 +304,7 @@ place_types:
     rules:
       - condition: 'true'
         icon:
-          iconUrl: /static/css/images/markers/marker-whale.png
+          iconUrl: /static/css/images/markers/marker-star.png
 
   # # needs a marker
   # farm:
@@ -401,7 +407,7 @@ place_types:
     rules:
       - condition: '{{layer.focused}} === true'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-star-green.png
           shadowUrl: /static/css/images/marker-shadow.png
           iconSize: [60, 60]
           iconAnchor: [30, 30]
@@ -410,19 +416,19 @@ place_types:
 
       - condition: '{{map.zoom}} < 11'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-star-green.png
           iconSize: [12, 12]
           iconAnchor: [6, 6]
 
       - condition: '{{map.zoom}} < 15'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-star-green.png
           iconSize: [18, 18]
           iconAnchor: [9, 9]
 
       - condition: '{{map.zoom}} >= 15'
         icon:
-          iconUrl: /static/css/images/markers/marker-star.png
+          iconUrl: /static/css/images/markers/marker-star-green.png
           iconSize: [30, 30]
           iconAnchor: [15, 15]
 
@@ -485,12 +491,16 @@ sidebar:
           visibleDefault: true
           layers:
 
-            - id: gtopenspace2
-              title: _(Chosen sites)
+            - id: siteinfo
+              title: _(Open space sites)
               visibleDefault: true
 
             - id: gtopenspace1
-              title: _(Nominated sites)
+              title: _(Potential future sites)
+              visibleDefault: false
+
+            - id: gtopenspace2
+              title: _(Community input)
               visibleDefault: true
 
             - id: cleanup
@@ -504,35 +514,6 @@ sidebar:
             - id: restoration
               title: _(Restoration Sites)
               visibleDefault: false
-
-        - id: grp-land
-          title: _(Land Data)
-          visibleDefault: false
-          layers:
-              # Land Use
-            - id: landuse
-              title: _(Land use)
-              visibleDefault: false
-
-              # Green Seattle Partnership restoration phases
-            - id: phases
-              title: _(Green Seattle partnership)
-              visibleDefault: false
-
-              # Noxious Weeds
-            - id: noxious-weeds
-              title: _(Noxious Weeds)
-              visibleDefault: false
-
-              # WRIA9 watershed
-            - id: watershed
-              title: _(Watershed)
-              visibleDefault: false
-
-        - id: grp-history
-          title: _(Historical Data)
-          visibleDefault: false
-          layers:
 
               # WMS Original Flow
             - id: duwamish-original
